--- a/src/main/resources/templates/forms/add-new-point.html
+++ b/src/main/resources/templates/forms/add-new-point.html
@@ -41,12 +41,12 @@
     <div class="form-wrapper flex flex-col md:flex-row">
       <div class="left-side md:w-1/2 w-full md:mr-1">
         <div class="form-row mt-4">
-          <input class="w-full block" type="text" name="pointCardName" id="pointCardName" required>
-          <label for="pointCardName">Название</label>
+          <input class="w-full block" type="text" name="pointCardName" id="pointCardName" required placeholder="Название">
+<!--          <label for="pointCardName">Название</label>-->
         </div>
         <div class="form-row mt-4">
-          <textarea class="w-full block max-h-[100px] h-[50px]" type="text" name="pointCardDescription" id="pointCardDescription"></textarea>
-          <label for="pointCardDescription">Описание</label>
+          <textarea class="w-full block max-h-[100px] h-[50px]" type="text" name="pointCardDescription" id="pointCardDescription" placeholder="Описание"></textarea>
+<!--          <label for="pointCardDescription">Описание</label>-->
         </div>
         <div class="form-row mt-4">
           <input class="w-full block" type="date" name="pointCardDate" id="pointCardDate" required>
