--- a/src/main/resources/templates/forms/change-user-data.html
+++ b/src/main/resources/templates/forms/change-user-data.html
@@ -45,16 +45,16 @@
                 <label for="userLoginForm"></label>
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="text" name="userLastNameForm" id="userLastNameForm" required>
-                <label for="userLastNameForm">Фамилия</label>
+                <input class="w-full block" type="text" name="userLastNameForm" id="userLastNameForm" required placeholder="Фамилия">
+<!--                <label for="userLastNameForm">Фамилия</label>-->
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="text" name="userFirstNameForm" id="userFirstNameForm" required>
-                <label for="userFirstNameForm">Имя</label>
+                <input class="w-full block" type="text" name="userFirstNameForm" id="userFirstNameForm" required placeholder="Имя">
+<!--                <label for="userFirstNameForm">Имя</label>-->
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="text" name="userPatronymicForm" id="userPatronymicForm" required>
-                <label for="userPatronymicForm">Отчество</label>
+                <input class="w-full block" type="text" name="userPatronymicForm" id="userPatronymicForm" placeholder="Отчество">
+<!--                <label for="userPatronymicForm">Отчество</label>-->
             </div>
             <div class="mt-2 button-row flex flex-col md:flex-row mt-5">
                 <a class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-green text-white
