--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,9 @@
                href="/login/index">Авторизоваться</a>
           </div>
         </div>
-        <div id="map"></div>
+        <div id="map">
+            <script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
+        </div>
         <a class="ml-3 d-block  md:w-1/2 text-center rounded-md py-3 px-5 md:mx-auto bg-green text-white text-xl md:text-xl"
            href="/new-point">Добавить новую точку</a>
       </div>
