--- a/src/main/resources/templates/lk/card-page-worker/close-point.html
+++ b/src/main/resources/templates/lk/card-page-worker/close-point.html
@@ -64,7 +64,7 @@
 
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 </div>
-                <div class="card-text mt-3 card-date-open card-date-open">
+                <div class="card-text mt-3 card-date-open">
                     <label for="card_name block">Дата открытия</label>
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                     <span class="my-1 block w-full message-no-input">Открыта</span>
