--- a/src/main/resources/templates/lk/card-page-worker/point-closed.html
+++ b/src/main/resources/templates/lk/card-page-worker/point-closed.html
@@ -51,7 +51,7 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
-            <div class="card-text my-3 card-description">
+            <div class="card-text my-3 comment-admin">
                 <label for="card_name block">Комментарий от администратора</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 <span class="my-1 block w-full message-no-input">Комментарий от администратора</span>
@@ -74,7 +74,7 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
-            <div class="card-text mt-3 card-date-open">
+            <div class="card-text mt-3 card-date-close">
                 <label for="card_name block">Дата закрытия</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 <span class="my-1 block w-full message-no-input">19.04.2021</span>
