--- a/src/main/resources/templates/lk/index-admin.html
+++ b/src/main/resources/templates/lk/index-admin.html
@@ -40,7 +40,7 @@
       >
         <label class="input-file">
           <input type="file" name="file" />
-          <img class="input-file-btn" src="/img/account_circle.svg" />
+          <img src="/img/account_circle.svg" id="userAvatar" class="aspect-square" alt=""></a>
         </label>
       </form>
       <div class="change-name-wrapper text-center my-2">
@@ -54,7 +54,7 @@
           value="Филина Ольга"
           class="hidden"
         />
-        <img class="inline edit" id="edit" src="/img/edit.svg" alt="" />
+        <img class="inline edit" id="edit" src="/img/edit.svg" alt="" href="/personal-data"/>
         <img class="inline hidden done" id="done" src="/img/done.svg" alt="" />
       </div>
     </div>
