--- a/src/main/resources/templates/lk/index-worker.html
+++ b/src/main/resources/templates/lk/index-worker.html
@@ -36,7 +36,7 @@
     <form class="form-change-photo" method="post" enctype="multipart/form-data">
         <label class="input-file">
             <input type="file" name="file">
-            <img class="input-file-btn" src="/img/account_circle.svg"/>
+            <img src="/img/account_circle.svg" id="userAvatar" class="aspect-square" alt=""></a>
             <!-- <span class="input-file-text">Максимум 10мб</span> -->
         </label>
     </form>
