--- a/src/main/resources/templates/forms/aprove-point-user.html
+++ b/src/main/resources/templates/forms/aprove-point-user.html
@@ -37,8 +37,8 @@
             <div class="md:text-4xl text-2xl mb-5 text-center">Вы уверены, что хотите верефицировать точку?</div>
             <p class="mb-3">Если вы уверены, впишите ФИО нового работника</p>
             <div class="form-row my-2">
-                <input class="w-full block" type="text" name="aprovePointUser" id="aprovePointUser" required>
-                <label for="aprovePointUser">ФИО работника</label>
+                <input class="w-full block" type="text" name="aprovePointUser" id="aprovePointUser" required placeholder="Логин сотрудника">
+<!--                <label for="aprovePointUser">ФИО работника</label>-->
             </div>
             <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
                 <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1
