--- a/src/main/resources/templates/forms/aprove-point-worker.html
+++ b/src/main/resources/templates/forms/aprove-point-worker.html
@@ -37,8 +37,8 @@
             <div class="md:text-4xl text-2xl mb-5 text-center">Вы уверены, что хотите верифицировать точку?</div>
             <p class="mb-3">Напишите комментарий</p>
             <div class="form-row my-2">
-                <textarea class="w-full block" type="text" name="aprovePointWorker" id="aprovePointWorker" required></textarea>
-                <label for="aprovePointWorker"> Напишите комментарий</label>
+                <textarea class="w-full block" type="text" name="aprovePointWorker" id="aprovePointWorker" required placeholder="Напишите комментарий"></textarea>
+<!--                <label for="aprovePointWorker"> Напишите комментарий</label>-->
             </div>
 
             <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
