--- a/src/main/resources/templates/forms/change-password-form.html
+++ b/src/main/resources/templates/forms/change-password-form.html
@@ -47,12 +47,12 @@
                 <label for="userLoginForm"></label>
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="password" name="userFirstPassword" id="userFirstPassword" required>
-                <label for="userFirstPassword">Придумайте пароль</label>
+                <input class="w-full block" type="password" name="userFirstPassword" id="userFirstPassword" required placeholder="Придумайте пароль">
+<!--                <label for="userFirstPassword">Придумайте пароль</label>-->
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="password" name="userSecondPassword" id="userSecondPassword" required>
-                <label for="userSecondPassword">Введите пароль еще раз</label>
+                <input class="w-full block" type="password" name="userSecondPassword" id="userSecondPassword" required placeholder="Введите пароль еще раз">
+<!--                <label for="userSecondPassword">Введите пароль еще раз</label>-->
             </div>
        
             <div class="mt-2 button-row flex flex-col md:flex-row mt-5">                
