--- a/src/main/resources/templates/forms/login-form.html
+++ b/src/main/resources/templates/forms/login-form.html
@@ -37,8 +37,8 @@
                 <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" required placeholder="Логин">
             </div>
             <div class="form-row mt-4">
-                <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required>
-                <label for="userLoginForm">Пароль</label>
+                <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required placeholder="Пароль">
+<!--                <label for="userLoginForm">Пароль</label>-->
             </div>
             <div class="mt-2 button-row flex flex-col md:flex-row mt-5">
                 <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1
