--- a/src/main/resources/templates/forms/registry-form.html
+++ b/src/main/resources/templates/forms/registry-form.html
@@ -34,24 +34,24 @@
         <form method="post" class="registry-form md:w-2/3 xl:w-1/2 md:max-w-[600px] w-full mx-auto md:my-10 my-3" enctype="application/x-www-form-urlencoded">
             <div class="md:text-4xl text-2xl mb-5 text-center">Регистрация</div>
             <div class="form-row mt-5">
-                <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" required>
-                <label for="userLoginForm">Логин</label>
+                <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" required placeholder="Логин">
+<!--                <label for="userLoginForm">Логин</label>-->
             </div>
             <div class="form-row mt-5">
-                <input class="w-full block" type="text" name="userLastNameForm" id="userLastNameForm" required>
-                <label for="userLastNameForm">Фамилия</label>
+                <input class="w-full block" type="text" name="userLastNameForm" id="userLastNameForm" required placeholder="Фамилия">
+<!--                <label for="userLastNameForm">Фамилия</label>-->
             </div>
             <div class="form-row mt-5">
-                <input class="w-full block" type="text" name="userFirstNameForm" id="userFirstNameForm" required>
-                <label for="userFirstNameForm">Имя</label>
+                <input class="w-full block" type="text" name="userFirstNameForm" id="userFirstNameForm" required placeholder="Имя">
+<!--                <label for="userFirstNameForm">Имя</label>-->
             </div>
             <div class="form-row mt-5">
-                <input class="w-full block" type="text" name="userPatronymicForm" id="userPatronymicForm" required>
-                <label for="userPatronymicForm">Отчество</label>
+                <input class="w-full block" type="text" name="userPatronymicForm" id="userPatronymicForm" required placeholder="Отчество">
+<!--                <label for="userPatronymicForm">Отчество</label>-->
             </div>
             <div class="form-row mt-5">
-                <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required>
-                <label for="userPasswordForm">Пароль</label>
+                <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required placeholder="Пароль">
+<!--                <label for="userPasswordForm">Пароль</label>-->
             </div>
             <button class="mt-4 block w-full text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-green text-white text-xl md:text-xl" >Войти</button>
         </form>
