--- a/src/main/resources/templates/forms/reject-point-user.html
+++ b/src/main/resources/templates/forms/reject-point-user.html
@@ -37,8 +37,8 @@
             <div class="md:text-4xl text-2xl mb-5 text-center">Вы уверены, что хотите отклонить точку?</div>
             <p class="mb-3">Напишите комментарий</p>
             <div class="form-row my-2">
-                  <textarea class="w-full block" type="text" name="rejectPointUser" id="rejectPointUser" required></textarea>
-                <label for="rejectPointUser"> Напишите комментарий</label>
+                  <textarea class="w-full block" type="text" name="rejectPointUser" id="rejectPointUser" required placeholder="Напишите комментарий"></textarea>
+<!--                <label for="rejectPointUser"> Напишите комментарий</label>-->
             </div>
             <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
                 <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto
