--- a/src/main/resources/templates/lk/card-page-user/index-rejected.html
+++ b/src/main/resources/templates/lk/card-page-user/index-rejected.html
@@ -51,7 +51,7 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
-            <div class="card-text mt-3 card-description">
+            <div class="card-text mt-3 comment-admin">
                 <label for="card_name block">Комментарий от администратора</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 <span class="my-1 block w-full message-no-input">Комментарий от администратора</span>
