--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -36,7 +36,7 @@
         <form class="form-change-photo" method="post" enctype="multipart/form-data">
             <label class="input-file">
                 <input type="file" name="file">
-                <img class="input-file-btn" src="/img/account_circle.svg"/>
+                <img src="/img/account_circle.svg" id="userAvatar" class="aspect-square" alt=""></a>
              </label>
         </form>
       <div class="change-name-wrapper text-center my-2">
